--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jasa Tukang Bangunan Tangerang Profesional & Terpercaya | Harian & Borongan - [Nama Anda/Usaha]</title>
+    <title>Jasa Tukang Bangunan Tangerang Profesional & Terpercaya | Harian & Borongan </title>
     <meta name="description" content="Cari tukang bangunan di Tangerang yang handal untuk renovasi, pembangunan baru, atau perbaikan rumah Anda? Kami penyedia jasa tukang harian & borongan terpercaya, siap survei lokasi gratis. Dapatkan harga terbaik langsung dari perorangan! Layanan di seluruh Tangerang (Kota, Kabupaten, Tangsel).">
     <meta name="keywords" content="tukang bangunan Tangerang, jasa tukang bangunan Tangerang, renovasi rumah Tangerang, bangun rumah Tangerang, tukang harian Tangerang, tukang borongan Tangerang, perbaikan rumah Tangerang, tukang bata Tangerang, tukang keramik Tangerang, tukang atap Tangerang, pengecatan Tangerang, renovasi kamar mandi Tangerang, bangun garasi Tangerang, pondasi Tangerang, pembuatan taman Tangerang, harga tukang bangunan Tangerang, survei gratis Tangerang">
     <link rel="canonical" href="https://yourusername.github.io/your-repo-name/index.html"> <link rel="preconnect" href="https://fonts.googleapis.com">
